--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,4 +1,4 @@
-APPS = serialize1 serialize2 serialize3 serialize4 ping-pong
+APPS = serialize1 serialize2 serialize3 serialize4 serialize5 ping-pong
 
 clean:
 	rm -f *~ *.o *.ssa *.rssa *.machine *.xml *.sxml *.ssa2 *.core-ml $(APPS)
