Fixed subscribe/unsubscribe setSockOpt to take in the Word8Vector along with the header

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,4 +1,9 @@
-APPS = serialize1 serialize2 serialize3 serialize4 serialize5 ping-pong
+APPS = serialize1.exe serialize2.exe serialize3.exe serialize4.exe serialize5.exe ping-pong.exe prefix-drop-test.exe weather.exe
+MORE =
 
+all: $(APPS)
+
+%.exe: %.sml
+	../src/build/bin/mlton -verbose 2 -output $@ $(MORE) $<
 clean:
 	rm -f *~ *.o *.ssa *.rssa *.machine *.xml *.sxml *.ssa2 *.core-ml $(APPS)
