Need to disable deepFlatten to prevent result of deserialization from being flattened

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -4,6 +4,6 @@ MORE =
 all: $(APPS)
 
 %.exe: %.sml
-	../src/build/bin/mlton -verbose 2 -output $@ $(MORE) $<
+	../src/build/bin/mlton -verbose 2 -output $@ -const 'Exn.keepHistory true' -drop-pass 'deepFlatten' $(MORE) $<
 clean:
 	rm -f *~ *.o *.ssa *.rssa *.machine *.xml *.sxml *.ssa2 *.core-ml $(APPS)
