Added DML. Added proxy option to ZMQ. Added primitives to start a proxy and connect to a proxy in DML.

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,11 +1,15 @@
 APPS = serialize1.exe serialize2.exe serialize3.exe serialize4.exe \
 			 serialize5.exe ping-pong.exe prefix-drop-test.exe weather.exe \
-			 weather-all-msgs.exe poll.exe
+			 weather-all-msgs.exe poll.exe dml-connect.app
 MORE =
 
 all: $(APPS)
 
 %.exe: %.sml
 	../src/build/bin/mlton -verbose 2 -output $@ -const 'Exn.keepHistory true' -drop-pass 'deepFlatten' $(MORE) $<
+
+%.app: %.mlb
+	../src/build/bin/mlton -verbose 2 -output $@ -const 'Exn.keepHistory true' -drop-pass 'deepFlatten' $(MORE) $<
+
 clean:
-	rm -f *~ *.o *.ssa *.rssa *.machine *.xml *.sxml *.ssa2 *.core-ml $(APPS)
+	rm -f *~ *.o *.ssa *.rssa *.machine *.xml *.sxml *.ssa2 *.core-ml *.exe *.app
