--- a/src/Makefile
+++ b/src/Makefile
@@ -134,7 +134,7 @@ docs: dirs
 		bin/make-pdf-guide; \
 	fi
 
-LIBRARIES := ckit-lib cml mlnlffi-lib mlrisc-lib mlyacc-lib smlnj-lib
+LIBRARIES := ckit-lib cml mlnlffi-lib mlrisc-lib mlyacc-lib smlnj-lib dml
 
 .PHONY: libraries-no-check
 libraries-no-check:
@@ -145,6 +145,7 @@ libraries-no-check:
 	$(MAKE) -C "$(SRC)/lib/mlrisc-lib"
 	$(MAKE) -C "$(SRC)/lib/smlnj-lib"
 	$(CP) "$(SRC)/lib/cml/." "$(LIB)/sml/cml"
+	$(CP) "$(SRC)/lib/dml/." "$(LIB)/sml/dml"
 	$(CP) "$(SRC)/lib/ckit-lib/ckit/." "$(LIB)/sml/ckit-lib"
 	$(CP) "$(SRC)/lib/mlnlffi-lib/." "$(LIB)/sml/mlnlffi-lib"
 	$(CP) "$(SRC)/lib/mlrisc-lib/MLRISC/." "$(LIB)/sml/mlrisc-lib"
