WIP.. stable comm needs to be updated. CALLBACK should be removed.

--- a/tests/DML/Makefile
+++ b/tests/DML/Makefile
@@ -11,4 +11,4 @@ all: $(APPS)
 	../../src/build/bin/mlton -verbose 2 -output $@ -const 'Exn.keepHistory true' -drop-pass 'deepFlatten' $(MORE) $<
 
 clean:
-	rm -f *~ *.o *.ssa *.rssa *.machine *.xml *.sxml *.ssa2 *.core-ml *.exe *.app
+	rm -f *~ *.o *.ssa *.rssa *.machine *.xml *.sxml *.ssa2 *.core-ml *.exe *.app *out
